--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       env:
         KAKAO_MAP_API_KEY: ${{ secrets.KAKAO_MAP_API_KEY }}
       run: |
-        sed -i 's/YOUR_API_KEY_HERE/'"$KAKAO_MAP_API_KEY"'/' index.html
+    sed -i 's/__KAKAO_MAP_API_KEY__/'"$KAKAO_MAP_API_KEY"'/' index.html
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
